[FIX][UI] Increase z-index of Smartmenus dropdowns so they aren't hidden by a... --- * [FIX][UI] Increase z-index of Smartmenus dropdowns so they aren't hidden by a fixed-top header when they are long and scroll upward.
See merge request tikiwiki/tiki!4917

--- a/themes/base_files/scss/_tiki-miscellaneous_global.scss
+++ b/themes/base_files/scss/_tiki-miscellaneous_global.scss
@@ -593,6 +593,13 @@ blockquote {
 .breadcrumb-item { padding-right: 0.5rem;}
 .breadcrumb .tips { padding-right: 0.5rem;}
 
+// Enable Smartmenus dropdown-menu to display above fixed-top header
+ul.sm-vertical,
+ul.sm-horizontal {
+    .dropdown-menu {
+        z-index: 1040;
+    }
+}
 
 // Vertical Smartmenus hack, until a proper solution is committed
 // For a vertical menu, assign a bootstrap menu, type "horiz", and add "smartmenu_vert" as containing class.
